# vibekeys_firmware

./: .gitignore  Cargo.toml  README.md  build.sh  partitions.csv  sdkconfig.defaults
.cargo/: config.toml
.github/workflows/: prerelease.yml  release.yml  rust_ci.yml
assets/: controller.html  controller_zh.html  ota.html  ota_index.html  ota_zh.html  setup.html
components/esp_new_jpeg/: bindgen.h
components/pngel/: CMakeLists.txt  wrapper.h
docs/: README_zh.md
src/: app.rs  audio.rs  bt_keyboard.rs  bt_keyboard_mode.rs  bt_wifi_mode.rs  crab_img.rs  lcd.rs  main.rs  mqtt.rs  new_jpg.rs  ota.rs  protocol.rs  ui.rs  util.rs  wifi.rs  ws.rs
src/ansi_plugin/: mod.rs  utils.rs
src/i2c/: mod.rs
