[package]
name = "vibekeys"
version = "0.1.0"
authors = ["csh <458761603@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "vibekeys"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
path = "src/main.rs"

[[bin]]
name = "ota"
harness = false
path = "src/ota.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"

esp-idf-svc = "0.51"
esp32-nimble = "0.11.1"
embedded-svc = "0.28.1"


zerocopy = "0.8.33"
zerocopy-derive = "0.8.33"

ssd1306 = "0.10.0"
embedded-graphics = "0.8.1"
futures-lite = "2.6.1"
futures-util = "0.3.31"


[build-dependencies]
embuild = "0.33"
