[package]
name = "vibekeys"
version = "0.1.0"
authors = ["csh <458761603@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "vibekeys"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
path = "src/main.rs"

[[bin]]
name = "ota"
harness = false
path = "src/ota.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"

esp-idf-svc = "0.51"
esp32-nimble = "0.11.1"
embedded-svc = "0.28.1"


zerocopy = "0.8.33"
zerocopy-derive = "0.8.33"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rmp-serde = "1"

# UI libraries
embedded-graphics = "0.8.1"
embedded-text = { version = "0.7.3", features = ["plugin", "ansi"] }
ansi-parser = "0.9.1"
u8g2-fonts = { version = "0.7.0", features = ["embedded_graphics_textstyle"] }
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "gif",
    "webp",
] }

tokio = { version = "1.43.0", features = [
    "net",
    "rt",
    "time",
    "io-std",
    "io-util",
    "macros",
] }
tokio-websockets = { version = "0.13", features = [
    "client",
    "fastrand",
    "sha1_smol",
    "rustls-webpki-roots"
] }

rustls-rustcrypto = { git = "https://github.com/RustCrypto/rustls-rustcrypto",rev="aecee37208823f6a4ffabeb7c0a1227015b131cb" }

http = "1.3"


futures-lite = "2.6.1"
futures-util = { version = "0.3.31", features = ["sink"] }
bytes = "1.11.1"

[build-dependencies]
embuild = "0.33"


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-sr", version = "^2.0.0" }
bindings_header = "components/esp_sr/bindgen.h"
bindings_module = "esp_sr"
