[package]
name = "vibekeys"
version = "0.4.0-rc.5"
authors = ["csh <458761603@qq.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "vibekeys"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors
path = "src/main.rs"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice, and they don't increase the size on Flash
opt-level = "z"

[features]
default = []
max2 = []
i2c_oled = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
anyhow = "1.0"

esp-idf-svc = "0.52.1"
esp32-nimble = "0.12.0"
embedded-svc = "0.29.0"


zerocopy = "0.8.33"
zerocopy-derive = "0.8.33"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UI libraries
embedded-graphics = "0.8.1"
embedded-text = { version = "0.7.3", features = ["plugin", "ansi"] }
ansi-parser = "0.9.1"
u8g2-fonts = { version = "0.8", features = ["embedded_graphics_textstyle"] }
# text 模式终端渲染:vt100 解析 + embedded-graphics 绘制。
# 临时用本地 path 依赖(egt 最新改动含 render_rows_diff);正式发布前换回 crates.io。
# vt100 用 crates.io 0.16(与本地的 egt 依赖一致,统一成一份)。
# embedded-graphics-terminal = "0.1"
# vt100 = "0.16"
embedded-graphics-terminal = { path = "../embedded-graphics-terminal", features = ["timing"] }
vt100 = "0.16"
image = { version = "0.25.6", default-features = false, features = [
    "png",
    "gif",
    "webp",
] }

tokio = { version = "=1.48.0", features = [
    "net",
    "rt",
    "sync",
    "time",
    "io-std",
    "io-util",
    "macros",
] }
http = "1.3"


futures-lite = "2.6.1"
bytes = "1.11.1"

[build-dependencies]
embuild = "0.33"


[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp-sr", version = "^2.0.0" }
bindings_header = "components/esp_sr/bindgen.h"
bindings_module = "esp_sr"

[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/esp_new_jpeg", version = "^1.0.0" }
bindings_header = "components/esp_new_jpeg/bindgen.h"